--- a/FitnessTrackerApp/.project
+++ b/FitnessTrackerApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FitnessTracker</name>
+	<name>FitnessTrackerApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
